Criada secao principal

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,14 @@
-<p>about-me works!</p>
+<div class="background">
+
+    <div class="title">
+        <div>
+            <img class="image-perfil" src="../../assets/images/perfil_jessica_2.png">
+        </div>
+        <div>
+            <h1 class="p-mb-3">Jéssica Santana</h1>
+            <h2 class="p-mt-4 p-pl-4" style="color: #35D0F2;"> Software Developer</h2>
+            <p class="code">code_with_me</p>
+        </div>
+    </div>
+
+</div>
