--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-about-me></app-about-me>
+<app-projects></app-projects>
 <app-footer></app-footer>
-<h1>Hello Word!</h1>
