--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,15 @@ body {
     margin: 0;
     overflow-x: hidden;
 }
+
+.gap-4 {
+    gap: 1.5rem;
+}
+
+.gap-3 {
+    gap: 1rem;
+}
+
+.gap-2 {
+    gap: 0.5rem;
+}
