--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,11 @@
 @import '~primeflex/primeflex.css';
 @import "primeicons/primeicons.css";
 
+html {
+    overflow-x: hidden;
+
+}
+
 body {
     margin: 0;
     overflow-x: hidden;
