--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,14 @@
-<div>
+<div id="contact">
     <h3 class="p-text-center">Entre em contato através das redes sociais abaixo</h3>
     <div class="p-fluid p-text-center p-mt-2 p-mb-2 p-p-2">
-        <button pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2"
-            icon="pi pi-fw pi-linkedin" aria-label="Linkedin" title="Linkedin"></button>
-        <button pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2"
-            icon="pi pi-fw pi-github" aria-label="Github" title="Github"></button>
-        <button pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2"
-            icon="pi pi-fw pi-whatsapp" aria-label="Contato whatsapp" title="Telefone"></button>
+        <a pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2" icon="pi pi-fw pi-linkedin"
+            aria-label="Linkedin" title="Linkedin" href="https://www.linkedin.com/in/jessica-santana-developer/"
+            target="_blank"></a>
+        <a pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2" icon="pi pi-fw pi-github"
+            aria-label="Github" title="Github" href="https://github.com/DJehSantana" target="_blank"></a>
+        <a pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2" icon="pi pi-fw pi-whatsapp"
+            aria-label="Contato whatsapp" title="Telefone"
+            href="https://wa.me/5519988060186/?text=Ol%C3%A1%2C%20tudo%20bem%3F" target="_blank"></a>
         <button pButton class="p-button-rounded p-button-help p-button-icon-only p-mr-2 p-mb-2" icon="pi pi-fw pi-at"
             aria-label="Contato Gmail" title="Email"></button>
     </div>
